xlib frontends mishandle glXDestroyContext
Destroying a current context is legal, and simply marks the context as destroyed until it is unbound for real. Neither the classic nor gallium frontends seem to get this right, though given !7464 (closed) we're probably only interested in fixing it for gallium. piglit's glx-destroycontext-3
seems to tickle this quite well.